force-app/main/default/objects/Product2/fields/Base_Part__c.field-meta.xml
<CustomField>
    <fullName>Base_Part__c</fullName>
    <label>Base Part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>