force-app/main/default/objects/Product2/fields/Battery_Type__c.field-meta.xml
<CustomField>
    <fullName>Battery_Type__c</fullName>
    <label>Battery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>AGM</fullName>
            </value>
            <value>
                <fullName>Flooded</fullName>
            </value>
            <value>
                <fullName>Gel</fullName>
            </value>
            <value>
                <fullName>Lead Acid</fullName>
            </value>
            <value>
                <fullName>Li-Ion</fullName>
            </value>
            <value>
                <fullName>LiFePO4</fullName>
            </value>
            <value>
                <fullName>Ni-Cd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>