force-app/main/default/objects/Product2/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <description>Luckins field</description>
    <label>Brand Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>