force-app/main/default/objects/Product2/fields/Brief_Description__c.field-meta.xml
<CustomField>
    <fullName>Brief_Description__c</fullName>
    <label>Brief Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>