force-app/main/default/objects/Product2/fields/Buy_Price_10__c.field-meta.xml
<CustomField>
    <fullName>Buy_Price_10__c</fullName>
    <label>Buy Price 10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>