force-app/main/default/objects/Product2/fields/Carton_Height__c.field-meta.xml
<CustomField>
    <fullName>Carton_Height__c</fullName>
    <label>Carton Height</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>