force-app/main/default/objects/Product2/fields/Carton_Length__c.field-meta.xml
<CustomField>
    <fullName>Carton_Length__c</fullName>
    <label>Carton Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>