force-app/main/default/objects/Product2/fields/Carton_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Carton_Quantity__c</fullName>
    <label>Carton Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>