force-app/main/default/objects/Product2/fields/Carton_Weight__c.field-meta.xml
<CustomField>
    <fullName>Carton_Weight__c</fullName>
    <formula>Unit_Weight__c  *  Carton_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carton Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>