force-app/main/default/objects/Product2/fields/Carton_Width__c.field-meta.xml
<CustomField>
    <fullName>Carton_Width__c</fullName>
    <label>Carton Width</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>