force-app/main/default/objects/Product2/fields/CC_Major__c.field-meta.xml
<CustomField>
    <fullName>CC_Major__c</fullName>
    <label>CC Major</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Commodity_General__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abrasives</fullName>
            </value>
            <value>
                <fullName>ABS Pipe Systems</fullName>
            </value>
            <value>
                <fullName>Access Control Systems</fullName>
            </value>
            <value>
                <fullName>Access Equipment</fullName>
            </value>
            <value>
                <fullName>Active Equipment</fullName>
            </value>
            <value>
                <fullName>Adhesives Sealants &amp; Fillers</fullName>
            </value>
            <value>
                <fullName>Aerials &amp; TV Equipment</fullName>
            </value>
            <value>
                <fullName>Air &amp; Dirt Separators</fullName>
            </value>
            <value>
                <fullName>Air Conditioning</fullName>
            </value>
            <value>
                <fullName>Air Curtains</fullName>
            </value>
            <value>
                <fullName>Air Line Systems</fullName>
            </value>
            <value>
                <fullName>Aluminium Perimeter Systems</fullName>
            </value>
            <value>
                <fullName>Aluminium Rainwater Systems</fullName>
            </value>
            <value>
                <fullName>Anchors</fullName>
            </value>
            <value>
                <fullName>Automated Gates &amp; Barriers</fullName>
            </value>
            <value>
                <fullName>Batteries &amp; Torches</fullName>
            </value>
            <value>
                <fullName>Boilers</fullName>
            </value>
            <value>
                <fullName>Bolts Nuts Washers</fullName>
            </value>
            <value>
                <fullName>Brazing Fittings</fullName>
            </value>
            <value>
                <fullName>Busbar Trunking Systems</fullName>
            </value>
            <value>
                <fullName>Business Services -  To be Classified</fullName>
            </value>
            <value>
                <fullName>Business Software</fullName>
            </value>
            <value>
                <fullName>Cabinets Racks &amp; Frames</fullName>
            </value>
            <value>
                <fullName>Cable &amp; Acc Specials</fullName>
            </value>
            <value>
                <fullName>Cable Accessories</fullName>
            </value>
            <value>
                <fullName>Cable Ladder</fullName>
            </value>
            <value>
                <fullName>Cable Management Specials</fullName>
            </value>
            <value>
                <fullName>Cable Management -  To be Classified</fullName>
            </value>
            <value>
                <fullName>Cables &amp; Accessories -  To be Classified</fullName>
            </value>
            <value>
                <fullName>Cables - Electrical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>