force-app/main/default/objects/Product2/fields/Colour_Material_Finish__c.field-meta.xml
<CustomField>
    <fullName>Colour_Material_Finish__c</fullName>
    <description>Luckins</description>
    <label>Colour/Material/Finish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>