force-app/main/default/objects/Product2/fields/Commodity_Code__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>HMRC Commodity Code</inlineHelpText>
    <label>Commodity Code</label>
    <referenceTo>Commodity_Codes__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>