force-app/main/default/objects/Product2/fields/Commodity_Code_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Code_Product_Group__c</fullName>
    <label>Commodity Code Product Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>