force-app/main/default/objects/Product2/fields/Commodity_Code_txt__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Code_txt__c</fullName>
    <label>Commodity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>