force-app/main/default/objects/Product2/fields/Commodity_General__c.field-meta.xml
<CustomField>
    <fullName>Commodity_General__c</fullName>
    <label>Commodity General</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fire &amp; Security</fullName>
            </value>
            <value>
                <fullName>Cable Management</fullName>
            </value>
            <value>
                <fullName>Cables &amp; Accessories</fullName>
            </value>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Wiring Accessories</fullName>
            </value>
            <value>
                <fullName>HVAC Equipment</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Pipe Systems</fullName>
            </value>
            <value>
                <fullName>Plumbing &amp; Drainage</fullName>
            </value>
            <value>
                <fullName>Tools &amp; Consumables</fullName>
            </value>
            <value>
                <fullName>Industrial Controls</fullName>
            </value>
            <value>
                <fullName>Circuit Protection</fullName>
            </value>
            <value>
                <fullName>HVAC Controls</fullName>
            </value>
            <value>
                <fullName>Fixings &amp; Supports</fullName>
            </value>
            <value>
                <fullName>Sanitary &amp; Bathroom</fullName>
            </value>
            <value>
                <fullName>Business Services</fullName>
            </value>
            <value>
                <fullName>Renewables</fullName>
            </value>
            <value>
                <fullName>Data Accessories</fullName>
            </value>
            <value>
                <fullName>Contract Service Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>