force-app/main/default/objects/Product2/fields/Considerations__c.field-meta.xml
<CustomField>
    <fullName>Considerations__c</fullName>
    <label>Considerations</label>
    <type>TextArea</type>
</CustomField>