force-app/main/default/objects/Product2/fields/Constant_Current_Region__c.field-meta.xml
<CustomField>
    <fullName>Constant_Current_Region__c</fullName>
    <label>Constant Current Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>