force-app/main/default/objects/Product2/fields/Contains_Battery__c.field-meta.xml
<CustomField>
    <fullName>Contains_Battery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains Battery?</label>
    <type>Checkbox</type>
</CustomField>