force-app/main/default/objects/Product2/fields/Current_Adj_Range__c.field-meta.xml
<CustomField>
    <fullName>Current_Adj_Range__c</fullName>
    <label>Current Adj. Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>