force-app/main/default/objects/Product2/fields/Cut_Point__c.field-meta.xml
<CustomField>
    <fullName>Cut_Point__c</fullName>
    <label>Cut Point (mm)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100mm</fullName>
            </value>
            <value>
                <fullName>125mm</fullName>
            </value>
            <value>
                <fullName>166.7mm</fullName>
            </value>
            <value>
                <fullName>25mm</fullName>
            </value>
            <value>
                <fullName>33.3mm</fullName>
            </value>
            <value>
                <fullName>33mm</fullName>
            </value>
            <value>
                <fullName>41.7mm</fullName>
            </value>
            <value>
                <fullName>45.45</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>56</fullName>
            </value>
            <value>
                <fullName>62.5</fullName>
            </value>
            <value>
                <fullName>71.4</fullName>
            </value>
            <value>
                <fullName>74.1</fullName>
            </value>
            <value>
                <fullName>83.3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>