force-app/main/default/objects/Product2/fields/Cutting_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Cutting_Measurement__c</fullName>
    <label>Cutting Measurement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>