force-app/main/default/objects/Product2/fields/Default_Transit_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Transit_Type__c</fullName>
    <label>Default Transit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEA</fullName>
            </value>
            <value>
                <fullName>AIR</fullName>
            </value>
            <value>
                <fullName>EXP</fullName>
            </value>
            <value>
                <fullName>INC</fullName>
            </value>
            <value>
                <fullName>NDD</fullName>
            </value>
            <value>
                <fullName>TRANSIT TBC</fullName>
            </value>
            <value>
                <fullName>NCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>