force-app/main/default/objects/Product2/fields/Description_40_char__c.field-meta.xml
<CustomField>
    <fullName>Description_40_char__c</fullName>
    <description>Fegime</description>
    <label>Description (40 char)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>