force-app/main/default/objects/Product2/fields/Detection_Distance__c.field-meta.xml
<CustomField>
    <fullName>Detection_Distance__c</fullName>
    <label>Detection Distance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>