force-app/main/default/objects/Product2/fields/Detection_Range__c.field-meta.xml
<CustomField>
    <fullName>Detection_Range__c</fullName>
    <label>Detection Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>