force-app/main/default/objects/Product2/fields/Dimensions_Luckins__c.field-meta.xml
<CustomField>
    <fullName>Dimensions_Luckins__c</fullName>
    <label>Dimensions - Luckins</label>
    <length>255</length>
    <type>Text</type>
</CustomField>