force-app/main/default/objects/Product2/fields/eCommerce__c.field-meta.xml
<CustomField>
    <fullName>eCommerce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product to be included on websites for sale</description>
    <label>eCommerce?</label>
    <type>Checkbox</type>
</CustomField>