force-app/main/default/objects/Product2/fields/EOL__c.field-meta.xml
<CustomField>
    <fullName>EOL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>End of Life Product</description>
    <inlineHelpText>End of Life Product - Do not use on new quotes unless you know there is stock available to use</inlineHelpText>
    <label>EOL</label>
    <type>Checkbox</type>
</CustomField>