force-app/main/default/objects/Product2/fields/ESD_sensitive__c.field-meta.xml
<CustomField>
    <fullName>ESD_sensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RS Data</description>
    <label>ESD sensitive?</label>
    <type>Checkbox</type>
</CustomField>