force-app/main/default/objects/Product2/fields/Family_Group__c.field-meta.xml
<CustomField>
    <fullName>Family_Group__c</fullName>
    <description>Formally Label in Plytix</description>
    <label>Family Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>