force-app/main/default/objects/Product2/fields/Farnell_SKU__c.field-meta.xml
<CustomField>
    <fullName>Farnell_SKU__c</fullName>
    <label>Farnell SKU</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>