force-app/main/default/objects/Product2/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the product of high value, volumetric or weight, with restricted shipping options i.e. can only be sea freighted - Add to advanced forecasting?</inlineHelpText>
    <label>Forecast?</label>
    <type>Checkbox</type>
</CustomField>