force-app/main/default/objects/Product2/fields/Free_Stock__c.field-meta.xml
<CustomField>
    <fullName>Free_Stock__c</fullName>
    <formula>Quantity_Available__c - Quantity_Back_Ordered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Stock not Committed - Quantity Back Ordered</inlineHelpText>
    <label>Free Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>