force-app/main/default/objects/Product2/fields/Full_Description__c.field-meta.xml
<CustomField>
    <fullName>Full_Description__c</fullName>
    <label>Full Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>