force-app/main/default/objects/Product2/fields/Has_Single_Country_Of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Has_Single_Country_Of_Origin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RS Data</description>
    <label>Has Single Country Of Origin?</label>
    <type>Checkbox</type>
</CustomField>