force-app/main/default/objects/Product2/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>RS Data - Individual Box Dimensions</description>
    <inlineHelpText>RS Data - Individual Box Dimensions</inlineHelpText>
    <label>Height</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>