force-app/main/default/objects/Product2/fields/IEC_320__c.field-meta.xml
<CustomField>
    <fullName>IEC_320__c</fullName>
    <label>IEC 320</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C5</fullName>
            </value>
            <value>
                <fullName>C6</fullName>
            </value>
            <value>
                <fullName>C7</fullName>
            </value>
            <value>
                <fullName>C8</fullName>
            </value>
            <value>
                <fullName>C13</fullName>
            </value>
            <value>
                <fullName>C14</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>