force-app/main/default/objects/Product2/fields/Impact_Protection__c.field-meta.xml
<CustomField>
    <fullName>Impact_Protection__c</fullName>
    <label>Impact Protection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IK08</fullName>
            </value>
            <value>
                <fullName>IK09</fullName>
            </value>
            <value>
                <fullName>IK10</fullName>
            </value>
            <value>
                <fullName>IK11</fullName>
            </value>
            <value>
                <fullName>IK12</fullName>
            </value>
            <value>
                <fullName>IK13</fullName>
            </value>
            <value>
                <fullName>IK14</fullName>
            </value>
            <value>
                <fullName>IK15</fullName>
            </value>
            <value>
                <fullName>IK16</fullName>
            </value>
            <value>
                <fullName>IK17</fullName>
            </value>
            <value>
                <fullName>IK18</fullName>
            </value>
            <value>
                <fullName>IK19</fullName>
            </value>
            <value>
                <fullName>IK20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>