force-app/main/default/objects/Product2/fields/Inner_Pack_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Inner_Pack_Dimensions__c</fullName>
    <description>RS DATA</description>
    <label>Inner Pack Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>