force-app/main/default/objects/Product2/fields/Inner_Pack_Size__c.field-meta.xml
<CustomField>
    <fullName>Inner_Pack_Size__c</fullName>
    <label>Inner Pack Size</label>
    <length>50</length>
    <type>Text</type>
</CustomField>