force-app/main/default/objects/Product2/fields/Input_Current__c.field-meta.xml
<CustomField>
    <fullName>Input_Current__c</fullName>
    <label>Input Current</label>
    <length>255</length>
    <type>Text</type>
</CustomField>