force-app/main/default/objects/Product2/fields/Input_DC_Voltage_Range__c.field-meta.xml
<CustomField>
    <fullName>Input_DC_Voltage_Range__c</fullName>
    <label>Input DC Voltage Range</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9 ~ 14VDC</fullName>
            </value>
            <value>
                <fullName>19 ~ 29VDC</fullName>
            </value>
            <value>
                <fullName>23 ~ 30VDC</fullName>
            </value>
            <value>
                <fullName>36 ~ 60VDC</fullName>
            </value>
            <value>
                <fullName>88 ~ 264VAC</fullName>
            </value>
            <value>
                <fullName>90 ~ 264VAC</fullName>
            </value>
            <value>
                <fullName>113 ~ 370VDC</fullName>
            </value>
            <value>
                <fullName>113 ~ 431VDC</fullName>
            </value>
            <value>
                <fullName>120 ~ 370VDC</fullName>
            </value>
            <value>
                <fullName>120 ~ 430VDC</fullName>
            </value>
            <value>
                <fullName>124 ~ 370VDC</fullName>
            </value>
            <value>
                <fullName>127 ~ 370VDC</fullName>
            </value>
            <value>
                <fullName>180 ~ 264VAC</fullName>
            </value>
            <value>
                <fullName>248 ~ 370VDC</fullName>
            </value>
            <value>
                <fullName>254 ~ 370VDC</fullName>
            </value>
            <value>
                <fullName>254 ~ 780VDC</fullName>
            </value>
            <value>
                <fullName>480 ~ 780VDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>