force-app/main/default/objects/Product2/fields/Inputs__c.field-meta.xml
<CustomField>
    <fullName>Inputs__c</fullName>
    <label>Inputs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Channel</fullName>
            </value>
            <value>
                <fullName>2 Channels</fullName>
            </value>
            <value>
                <fullName>3 Channels</fullName>
            </value>
            <value>
                <fullName>4 Channels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>