force-app/main/default/objects/Product2/fields/Last_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchase_Price__c</fullName>
    <label>Last Purchase Price</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>