force-app/main/default/objects/Product2/fields/LED_Chip_Type__c.field-meta.xml
<CustomField>
    <fullName>LED_Chip_Type__c</fullName>
    <label>LED Chip Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2016</fullName>
            </value>
            <value>
                <fullName>2835</fullName>
            </value>
            <value>
                <fullName>3030</fullName>
            </value>
            <value>
                <fullName>3528</fullName>
            </value>
            <value>
                <fullName>5050</fullName>
            </value>
            <value>
                <fullName>Bridgelux</fullName>
            </value>
            <value>
                <fullName>Edison</fullName>
            </value>
            <value>
                <fullName>Epistar</fullName>
            </value>
            <value>
                <fullName>LUMILEDS</fullName>
            </value>
            <value>
                <fullName>Nationstar</fullName>
            </value>
            <value>
                <fullName>NICHIA</fullName>
            </value>
            <value>
                <fullName>Philips</fullName>
            </value>
            <value>
                <fullName>SMD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>