force-app/main/default/objects/Product2/fields/LED_Count__c.field-meta.xml
<CustomField>
    <fullName>LED_Count__c</fullName>
    <label>LED Count</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>60+60</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>72</fullName>
            </value>
            <value>
                <fullName>84</fullName>
            </value>
            <value>
                <fullName>108</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>128</fullName>
            </value>
            <value>
                <fullName>140</fullName>
            </value>
            <value>
                <fullName>200</fullName>
            </value>
            <value>
                <fullName>210</fullName>
            </value>
            <value>
                <fullName>336</fullName>
            </value>
            <value>
                <fullName>528</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>