force-app/main/default/objects/Product2/fields/Life_Time__c.field-meta.xml
<CustomField>
    <fullName>Life_Time__c</fullName>
    <label>Life Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30,000Hrs</fullName>
            </value>
            <value>
                <fullName>50,000Hrs</fullName>
            </value>
            <value>
                <fullName>200,000Hrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>