force-app/main/default/objects/Product2/fields/M3_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>M3_Item_Code__c</fullName>
    <description>Rexel M3 Item Code</description>
    <externalId>true</externalId>
    <inlineHelpText>Rexel M3 Item Code</inlineHelpText>
    <label>M3 Item Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>