force-app/main/default/objects/Product2/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <label>Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actec</fullName>
            </value>
            <value>
                <fullName>ADEL Systems</fullName>
            </value>
            <value>
                <fullName>AXG Lighting</fullName>
            </value>
            <value>
                <fullName>CTEK</fullName>
            </value>
            <value>
                <fullName>Delta Electronics</fullName>
            </value>
            <value>
                <fullName>EDAC</fullName>
            </value>
            <value>
                <fullName>IllumiLed</fullName>
            </value>
            <value>
                <fullName>J. Schneider</fullName>
            </value>
            <value>
                <fullName>MEAN WELL</fullName>
            </value>
            <value>
                <fullName>PowerLed</fullName>
            </value>
            <value>
                <fullName>Seasonic</fullName>
            </value>
            <value>
                <fullName>Skynet</fullName>
            </value>
            <value>
                <fullName>Sunpower</fullName>
            </value>
            <value>
                <fullName>Sunpower Technology Corporation</fullName>
            </value>
            <value>
                <fullName>TopBand</fullName>
            </value>
            <value>
                <fullName>Victron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>