force-app/main/default/objects/Product2/fields/Manufacturer_Part__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Part__c</fullName>
    <label>Manufacturer Part</label>
    <length>64</length>
    <type>Text</type>
</CustomField>