force-app/main/default/objects/Product2/fields/MPQ_Pack_Type__c.field-meta.xml
<CustomField>
    <fullName>MPQ_Pack_Type__c</fullName>
    <label>MPQ Pack Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carton</fullName>
            </value>
            <value>
                <fullName>Reel</fullName>
            </value>
            <value>
                <fullName>Blister</fullName>
            </value>
            <value>
                <fullName>Bag</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>