force-app/main/default/objects/Product2/fields/MSL_Moisture_Sensitivity_Level__c.field-meta.xml
<CustomField>
    <fullName>MSL_Moisture_Sensitivity_Level__c</fullName>
    <description>RS DATA</description>
    <label>MSL - Moisture Sensitivity Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>