force-app/main/default/objects/Product2/fields/NetSuite_Item_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Item_Internal_Id__c</fullName>
    <description>This field contains the item internal id of NetSuite Item</description>
    <label>NetSuite Item Internal Id</label>
    <type>TextArea</type>
</CustomField>