force-app/main/default/objects/Product2/fields/NetSuite_Item_URL__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Item_URL__c</fullName>
    <description>This field contains the NetSuite Item URL</description>
    <label>NetSuite Item URL</label>
    <type>Url</type>
</CustomField>