force-app/main/default/objects/Product2/fields/NRND__c.field-meta.xml
<CustomField>
    <fullName>NRND__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not Recommended for New Design</description>
    <inlineHelpText>Not Recommended for New Design as being discontinued</inlineHelpText>
    <label>NRND</label>
    <type>Checkbox</type>
</CustomField>